adicionando json ao fazer build
